# markit-desktop

./: .gitignore  AGENTS.md  LICENSE  MIGRATION.md  README.md  build-sidecar.sh  index.html  markitdown-gui.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  skills-lock.json  tsconfig.json
.github/workflows/: release.yml
python-sidecar/: convert.py  convert.spec  requirements.txt
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/: .gitkeep  markit-convert-x86_64-unknown-linux-gnu
src-tauri/src/: commands.rs  converter.rs  lib.rs  main.rs  settings.rs
src/lib/components/: FilePanel.svelte  PreviewPanel.svelte  StatusBar.svelte  Toolbar.svelte
src/lib/stores/: conversion.ts  files.ts  settings.ts
src/markitdown_gui/: __main__.py  converter.py  file_panel.py  main_window.py  preview_panel.py  settings.py
src/markitdown_gui/resources/: styles.qss
