[package]
name = "markit-desktop"
version = "0.2.0"
description = "Modern cross-platform GUI for MarkItDown file-to-Markdown converter"
authors = ["MarkIt-Desktop Contributors"]
edition = "2021"

[lib]
name = "markit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
